--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,56 @@
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
-  padding: 2rem;
+
   text-align: center;
 }
 #parentDiv {
   display: grid;
   grid-template-columns: 1fr 1fr;
+}
+#navbar {
+  display: flex;
+  height: 60px;
+  background-color: rgb(46, 45, 59);
+  align-items: center;
+  padding: 0 15px 0 15px;
+  top: 0;
+  position: sticky;
+}
+#navbar img {
+  width: 50px;
+  margin-right: 10px;
+  cursor: pointer;
+}
+#navbar h3 {
+  color: #fff;
+  cursor: pointer;
+}
+#navbar ul {
+  width: 500px;
+  display: flex;
+  justify-content: space-between;
+  padding: 0;
+  margin: 0 auto;
+}
+#navbar ul a {
+  color: #fff;
+  text-decoration: none;
+}
+#navbar span {
+  display: flex;
+  width: 200px;
+  justify-content: space-between;
+  align-items: center;
+}
+#navbar span i {
+  color: #fff;
+  font-size: 25px;
+  cursor: pointer;
+}
+#navbar span img {
+  height: 40px;
+  width: 40px;
+  border: 1px solid #fff;
+  border-radius: 50%;
 }
