responsive for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,17 @@
 #root {
-  /* max-width: 1280px; */
+  max-width: 1600px;
   margin: 0 auto;
-
+  overflow: hidden;
   text-align: center;
 }
 #parentDiv {
   display: grid;
   grid-template-columns: 1fr 1fr;
+}
+@media (max-width: 768px) {
+  #parentDiv {
+    overflow: auto;
+  }
 }
 #navbar {
   display: flex;
@@ -141,6 +146,11 @@
 #mainDiv {
   display: flex;
 }
+@media (max-width: 1200px) {
+  #mainDiv {
+    flex-direction: column;
+  }
+}
 #progressDiv {
   display: flex;
   flex-direction: column;
@@ -148,6 +158,16 @@
   margin: 10px;
   padding: 30px 10px 10px 30px;
   width: 100%;
+}
+@media (max-width: 1200px) {
+  #progressDiv {
+    width: 620px;
+  }
+}
+@media (max-width: 768px) {
+  #progressDiv {
+    width: 90%;
+  }
 }
 #progressDiv #imgDiv {
   display: flex;
@@ -182,4 +202,7 @@
 #progressDiv h3 {
   text-align: center;
   margin: 0 0 20px 0;
+}
+canvas {
+  aspect-ratio: 0;
 }
