--- a/src/App.css
+++ b/src/App.css
@@ -234,3 +234,41 @@
 canvas {
   aspect-ratio: 0;
 }
+.spinner {
+  margin: 100px auto;
+  width: 40px;
+  height: 40px;
+  position: relative;
+  text-align: center;
+  animation: rotate 2s infinite linear;
+}
+
+.spinner:before {
+  content: "";
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  border: 2px solid #ccc;
+  border-top-color: #333;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -10px 0 0 -10px;
+  animation: spin 1.5s infinite ease-in-out;
+}
+
+@keyframes rotate {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  50% {
+    transform: rotate(720deg);
+    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  }
+  100% {
+    transform: rotate(1080deg);
+  }
+}
